# personalities

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  devnotes.json
.githooks/: pre-commit  prepare-commit-msg
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
assets/: reference_performance.mid  user_performance.mid
cmake/: UpdateBuildInfo.cmake
tmp/: xcrun_db
tmp/.cache/clang/ModuleCache/2DFVIPFHVC8DJ/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  Cocoa-1MK6YYY84V08M.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DataDetection-R5W4QHNMPWVH.pcm  DeveloperToolsSupport-3SUCMSK9ZS2JA.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOSurface-26455DPS9NDS0.pcm  ImageIO-2ZSF831VT29UB.pcm  MachO-20RPYVQSX341K.pcm  Metal-1GCZV9N85NJOH.pcm  OSLog-218FBXNFJGY61.pcm  ObjectiveC-1G8H182PQX3QE.pcm  OpenGL-H89XJT7GTCP.pcm  PDFKit-FTXXL1FCFMYT.pcm  QuartzCore-39A8LQKF980J1.pcm  Security-3QCVXOV25KK54.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  SwiftUICore-86HIVXUC6WOA.pcm  Symbols-3KC1789KJFX94.pcm  UniformTypeIdentifiers-1OLJP4K3PLM48.pcm  XPC-T0ZXCAST7PE3.pcm  _AvailabilityInternal-2YSBQADOLX02V.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_intrinsics-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdatomic-19KE09ZDXQ6Q3.pcm  _Builtin_stdbool-19KE09ZDXQ6Q3.pcm  (+17 more)
tools/: OfflineMatchSim.cpp
